FAQ Page Spacing Correction

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ let black = #111;
 -----------------------------------------------------------------*/
 
 .answer-text {
-	font-size: 19px;
+	font-size: 18px;
 	font-weight: 400;
 }
 
